Fix some code smells reported by sonar (#178)
* Fix some code smells reported by sonar

Signed-off-by: Tom Bentley <tbentley@redhat.com>